camera needs to placed into a separate component so that we can navigate to it

--- a/app.json
+++ b/app.json
@@ -22,6 +22,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow Virtual Vogue to access your camera"
+        }
+      ]
+    ]
   }
 }
