--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-shadow": "^1.2.2",
     "react-native-shadow-2": "^7.1.0",
     "react-native-web": "~0.19.10",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "expo-camera": "~15.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
