--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "^18.3.3",
     "expo": "~51.0.14",
+    "expo-camera": "~15.0.12",
     "expo-font": "^12.0.7",
+    "expo-image-manipulator": "^12.0.5",
     "expo-splash-screen": "0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -26,8 +28,7 @@
     "react-native-shadow": "^1.2.2",
     "react-native-shadow-2": "^7.1.0",
     "react-native-web": "~0.19.10",
-    "typescript": "^5.5.2",
-    "expo-camera": "~15.0.12"
+    "typescript": "^5.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
