--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-shadow": "^1.2.2",
     "react-native-shadow-2": "^7.1.0",
     "react-native-web": "~0.19.10",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "expo-media-library": "~16.0.4",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
